# paperbot

./: README.md  pyproject.toml
paperbot/: app.py  bot.py  datatype.py  gradio_ui.py  slack_bot.py
